--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -4,6 +4,13 @@
 <head>
 <meta charset="utf-8">
 <title>{% if page.title %}{{ page.title }}{% else %}{{ thisnodes[0].title }}{% endif %}</title>
+
+{% if thisnodes[0].datafile %}
+<script async type="text/javascript" src="{{ ASSET_PATH }}/js/jobad-list.js"></script>
+{% else %}
+<script async type="text/javascript" src="{{ ASSET_PATH }}/js/default.js"></script>
+{% endif %}
+
 {% if page.description %}
 <meta name="description" content="{{ page.description }}">
 {% else %}
@@ -51,9 +58,8 @@
 <meta name="twitter:image" content="https://remote4me.com/og-image-quadrat-400-400.png?v=q002">
 {% endif %}
 {% if page.style %}{{ page.style }}{% endif %}
-{% if thisnodes[0].datafile %}
-{% endif %}
 </head>
+
 <body class="collapsing_header">
 
   <header>
@@ -112,12 +118,8 @@
         </section>
       </footer>
     </div>
-  {% if thisnodes[0].datafile %}
-    <script type="text/javascript" src="{{ ASSET_PATH }}/js/jobad-list.js"></script>
-  {% else %}
-    <script type="text/javascript" src="{{ ASSET_PATH }}/js/default.js"></script>
-  {% endif %}
-  <script async>
+
+  <script>
       WebFontConfig = {
           google: {
               families: ['Open Sans:300,400,600,700']
@@ -134,6 +136,15 @@
           s.parentNode.insertBefore(wf, s);
       })(document);
   </script>
-  {% include JB/analytics %}
-  </body>
+
+  <script async type="text/javascript" src="https://www.googletagmanager.com/gtag/js?id=UA-117928562-1"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-117928562-1');
+  </script>
+
+</body>
 </html>
