subscribe daily, +image placeholders
Former-commit-id: ebcdd97779a82a2555bfe268ba80e93cf601b9c3

--- a/_includes/themes/restart/page-jobad-modal-email-subscribe.html
+++ b/_includes/themes/restart/page-jobad-modal-email-subscribe.html
@@ -36,7 +36,7 @@
 
 <!-- "subscribe to DAILY mail list" dialog -->
 <div id="subscribe-daily-modal-id" class="modal fade subscribe-daily-modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -46,44 +46,65 @@
                   action="https://landing.mailerlite.com/webforms/landing/r2q9o2">
                 <div class="modal-body">
                     <div class="row">
-                        <p>
-                        <span class="fa fa-check" style="color: #428bca;"></span> Every evening (21:00 EST) you will get an email with the list of <em>{{ thisnodes[0].title }}</em> that appeared on remote4me.com during the <strong>day</strong>.<br/>
-                        <span class="fa fa-check" style="color: #428bca;"></span> Unsubscribe any time: the unsubscribe link is in every email.<br/>
-                        <span class="fa fa-check" style="color: #428bca;"></span> This email list sends you new job ads. Not for marketing/promotional purposes.<br/>
-                        </p>
-                        <div class="form-group">
-                            <label for="day-input-email-id" class="col-sm-3 control-label" >Email:</label>
-                            <div class="col-sm-6">
-                            <input type="email" required class="form-control" id="day-input-email-id" name="fields[email]" placeholder="you@youremail.com">
+                        <div class="col-md-4">
+                            <img src="https://via.placeholder.com/255x120">
+                        </div>
+                        <div class="col-md-8">
+                            <p>
+                                <span class="fa fa-check" style="color: #428bca;"></span> Every evening (21:00 EST) you will get an email with the list of <em>{{ thisnodes[0].title }}</em> that appeared on remote4me.com during the <strong>day</strong>.<br/>
+                                <span class="fa fa-check" style="color: #428bca;"></span> Unsubscribe any time: the unsubscribe link is in every email.<br/>
+                                <span class="fa fa-check" style="color: #428bca;"></span> This email list sends you new job ads. Not for marketing/promotional purposes.<br/>
+                            </p>
+                            <div class="form-group">
+                                <label for="day-input-email-id" class="col-sm-3 control-label" >Email:</label>
+                                <div class="col-sm-6">
+                                    <input type="email" required class="form-control" id="day-input-email-id" name="fields[email]" placeholder="you@youremail.com">
+                                </div>
                             </div>
+                        </div>
+
+                    </div><!--row -->
+
+                    <div class="row">
+                        <div class="col-md-4">
+                        </div>
+                        <div class="col-md-8">
+                            <br/>
+                            <br/>
+                            <strong>Please help ME help YOU</strong><br/>
                         </div>
                     </div><!--row -->
+
                     <div class="row">
-                        <br/>
-                        <p>
-                            <strong>Please help ME help YOU</strong><br/>
-                            The remote4me.com site is a one-man show. I am working on adding new job boards, as well as
-                            improving the classifiers ("remoteness", "tech stack", etc). I'm adding new features
-                            to this site (like this email list). I'm also doing marketing. It eats a lot of time!
-                            So if YOU help me with marketing, then I have more time to work on new features,
-                            such as improved "time zone" classifier, new "work authorization" classifier, and many others.<br/>
-                            This is how you can help me:<br/>
-                            <span class="fa fa-check" style="color: #428bca;"></span> Please link to this site from a prominent page on your site or blog (alternatively, post on your favorite social network or online forum, and link back to this site).<br/>
-                            <span class="fa fa-check" style="color: #428bca;"></span> <strong>Submit the link to your page/post in the field below</strong>. One link is enough.
-                            After this, you'll get email updates for as long as you wish.
-                        </p>
-
-                        <div class="form-group">
-                            <label for="inputUrl4" class="col-sm-3 control-label">Page/post URL:</label>
-                            <div class="col-sm-8">
-                                <input id="inputUrl4" type="url" required class="form-control" name="fields[url_promo]" placeholder="https://social-network.com/post-url" pattern="https?://.+" size="15">
-                            </div>
+                        <div class="col-md-4">
+                            <img src="https://via.placeholder.com/255x294">
                         </div>
-                        <input type="hidden" name="groups[]" value="{{ thisnodes[0].mailGroupDay }}" checked="checked">
-                        <input type="hidden" name="ml-submit" value="1">
-                        <input type="hidden" name="ajax" value="1">
+                        <div class="col-md-8">
+                            <p>
+                                The remote4me.com site is a one-man show. I am working on adding new job boards, as well as
+                                improving the classifiers ("remoteness", "tech stack", etc). I'm adding new features
+                                to this site (like this email list). I'm also doing marketing. It eats a lot of time!
+                                So if YOU help me with marketing, then I have more time to work on new features,
+                                such as improved "time zone" classifier, new "work authorization" classifier, and many others.<br/>
+                                This is how you can help me:<br/>
+                                <strong>(1)</strong> Please post a link to remote4me together with a few sentences on a prominent page on your site or blog or an online forum (alternatively, post on your favorite social network).<br/>
+                                <strong>(2)</strong> Copy the link to your page/post.<br/>
+                                <strong>(3)</strong> Paste the link to your page/post in the field below. One link is enough. After this, you'll get email updates for as long as you wish.
+                            </p>
 
-                        Thank you for helping me make remote4me.com even more useful!
+                            <div class="form-group">
+                                <label for="inputUrl4" class="col-sm-3 control-label">Page/post URL:</label>
+                                <div class="col-sm-8">
+                                    <input id="inputUrl4" type="url" required class="form-control" name="fields[url_promo]" placeholder="https://url-of-the-post" pattern="https?://.+" size="15">
+                                </div>
+                            </div>
+                            <input type="hidden" name="groups[]" value="{{ thisnodes[0].mailGroupDay }}" checked="checked">
+                            <input type="hidden" name="ml-submit" value="1">
+                            <input type="hidden" name="ajax" value="1">
+
+                            Thank you for helping me make remote4me.com even more useful!
+
+                        </div>
                     </div><!--row -->
                 </div><!--modal body -->
                 <div class="modal-footer">
