--- a/_includes/themes/restart/assets/userstyle.css
+++ b/_includes/themes/restart/assets/userstyle.css
@@ -362,3 +362,22 @@ td.detail-td {
 .fa-flag-o:before {
     margin-right: 3px;
 }
+
+/****************/
+div.side_image_daily_1 {
+    background-image: url(https://via.placeholder.com/184x116);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+    text-align: center;
+    height: 116px;
+}
+
+div.side_image_daily_2 {
+    background-image: url(https://via.placeholder.com/184x330);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+    text-align: center;
+    height: 330px;
+}
