--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -49,16 +49,16 @@
 {% if page.permalink == '/' %}
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary_large_image">
-<meta property="og:image" content="https://remote4me.com/og-image.png?v=wide003">
+<meta property="og:image" content="{{ site.site_og_wide_image }}">
 <meta property="og:image:width" content="1974">
 <meta property="og:image:height" content="1034">
 {% else %}
 <meta property="og:type" content="article"/>
 <meta name="twitter:card" content="summary">
-<meta property="og:image" content="https://remote4me.com/og-image.png?v=wide003">
+<meta property="og:image" content="{{ site.site_og_wide_image }}">
 <meta property="og:image:width" content="1974">
 <meta property="og:image:height" content="1034">
-<meta name="twitter:image" content="https://remote4me.com/og-image-quadrat-400-400.png?v=q002">
+<meta name="twitter:image" content="{{ site.site_og_quadrat_small_image }}">
 {% endif %}
 
 <style type="text/css">
