--- a/_includes/themes/restart/page-jobad-modal-email-subscribe.html
+++ b/_includes/themes/restart/page-jobad-modal-email-subscribe.html
@@ -105,6 +105,7 @@
                                     -->
                                     <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.production_url | escape }}{{ page.permalink | escape }}&title={{ thisnodes[0].title }}&summary={{ 'Say something about it...' | escape }}" target="_blank" aria-label=""><i class="fa fa-border fa-linkedin"></i></a>
                                     &nbsp;&#32;
+                                    (your post should be public).
                                     <br/>
                                     <br/>
                                 </div>
@@ -112,7 +113,7 @@
                                     <span class="badge" style="float: none;">2</span>
                                 </div>
                                 <div class="col-xs-11">
-                                    Copy the link to your page/post.<br/>
+                                    Copy the link to your page/post (it is better to use a computer for copying).<br/>
                                     <br/>
                                 </div>
                                 <div class="col-xs-1" style="width: 2%;">
