--- a/_includes/render_jobad_list.html
+++ b/_includes/render_jobad_list.html
@@ -117,7 +117,7 @@
 </section>
 
 <section>
-    <div class="container">
+    <div class="container job-table-container">
         <div>
             <div id="loaderID" class="loader">
                 <div class="container">
