+popover in bootstrap
Former-commit-id: 662b417ed7abeea41b98f5127f011decc0a98511

--- a/_includes/themes/restart/page-jobad-modal-email-subscribe.html
+++ b/_includes/themes/restart/page-jobad-modal-email-subscribe.html
@@ -79,10 +79,9 @@
                         </div>
                         <div class="col-xs-12 col-sm-9 xs-no-padding-left xs-no-padding-right">
                             <b>Please help ME help YOU:</b> The remote4me.com site is a one-man show. I am working on adding new job boards, as well as
-                            improving the classifiers ("remoteness", "tech stack", etc). I'm adding new features
-                            to this site (like this email list). I'm also doing marketing. It eats a lot of time!
-                            So if YOU help me with marketing, then I have more time to work on new features,
-                            such as improved "time zone" classifier, new "work authorization" classifier, and many others.<br/>
+                            <a href="#" data-container="#form-subscribe-daily-modal-id" data-placement="top" data-trigger="click hover focus" data-toggle="popover" data-html="true" data-content='Classifiers are putting jobs in the proper category. 4 classifiers are implemented at the moment:<br/> - remoteness classifier<br/> - profession classifier<br/> - tech stack classifier<br/> - time zone classifier<br/>' >improving the classifiers</a>.
+                            I'm adding new features to this site. I'm also doing marketing. It eats a lot of time! So if YOU help me with marketing, then I have more time to work on
+                            <a href="#" data-container="#form-subscribe-daily-modal-id" data-placement="top" data-trigger="click hover focus" data-toggle="popover" data-html="true" data-content='New features in the pipeline:<br/> - new "work authorization" classifier<br/> - salary statistics<br/>'>new features</a>.
                             This is how you can help me:<br/><br/>
                             <div class="row">
                                 <div class="col-xs-1 xs-no-padding-left sm-width-2perc" >
