small screen menu placement
Former-commit-id: ed52c807bec7592e80ba93baa582075ac34ec005

--- a/_includes/themes/restart/assets/userstyle.css
+++ b/_includes/themes/restart/assets/userstyle.css
@@ -89,6 +89,10 @@ div.homepage-f3 {
     .xs-no-padding-right{
         padding-right: 0px;
     }
+    .navbar a.navbar-brand {
+        width: 150px;
+    }
+
 }
 @media (min-width: 481px) {
     .sm-width-2perc{
