--- a/_includes/themes/restart/page-jobad-list.html
+++ b/_includes/themes/restart/page-jobad-list.html
@@ -4,14 +4,15 @@
   <div class="container">
     <div id="alert-placeholder-id"></div>
     <div class="row">
-      <div class="col-md-10">
+      <div class="col-sm-10">
         <h1 class="elegant">{{ thisnodes[0].title }}</h1>
         {% if thisnodes[0].undertagline %}
         <h2>{{ thisnodes[0].undertagline }}</h2>
         {% endif %}
       </div>
-      <div class="col-md-2 hidden-xs">
-        <div class="btn-group btn-div" style="display: none;">
+      <div class="col-sm-2 hidden-xs">
+        <!--
+        <div class="btn-group btn-div" >
           <button class="btn btn-primary btn-xs dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fa fa-envelope-o"></i> Get email updates <span class="caret"></span>
           </button>
@@ -24,9 +25,20 @@
             </li>
           </ul>
         </div>
-        <!--
-        <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         -->
+
+        <div style="font-size: 12px; color: #999;">Post, tweet, share:</div>
+        <div>
+          <a href="https://facebook.com/sharer/sharer.php?display=popup&u={{ site.production_url | escape }}{{ page.permalink | escape }}" target="_blank" aria-label="Share on Facebook">
+            <i class="fa fa-border fa-facebook-f"></i>
+          </a>
+          <a href="https://twitter.com/intent/tweet/?text={% if page.title %}{{ page.title }}{% else %}{{ thisnodes[0].title }}{% endif %}&url={{ site.production_url | escape }}{{ page.permalink | escape }}" target="_blank" aria-label="Share on Twitter">
+            <i class="fa fa-border fa-twitter"></i>
+          </a>
+          <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.production_url | escape }}{{ page.permalink | escape }}&title={{ thisnodes[0].title }}&summary={{ 'Say something about it...' | escape }}" target="_blank" aria-label="Share on Linkedin">
+            <i class="fa fa-border fa-linkedin"></i>
+          </a>
+        </div>
       </div><!--col-->
     </div><!--row-->
 
